--- a/about.html
+++ b/about.html
@@ -7,5 +7,5 @@ title: "About"
 <section class="content">
   <h1>{{ site.name }}</h1>
 
-  <p>Astrophysics! et al.</p>
+  <p>Astrophysics! Data Science! et al.</p>
 </section>
