--- a/about.html
+++ b/about.html
@@ -7,5 +7,19 @@ title: "About"
 <section class="content">
   <h1>{{ site.name }}</h1>
 
-  <p>Astrophysics! Data Science! et al.</p>
+  <p>Hello World. My name is Chalence Safranek-Shrader. I grew up in sunny Los Angeles, California, and
+    received my B.S. in astrophysics from UCLA in 2007. In 2014 I was awarded my Ph.D from the University 
+    of Texas at Austin where I was jointly advised by Volker Bromm and Milos Milosavljevic. I am currently
+    a postdoctoral fellow at the University of California, Berkeley where I work with Christopher McKee and 
+    Richard Klein.</p>
+
+ <p>Research wise, I'm interested in understanding how stars form across cosmic time - both at high redshifts and at the
+    present day. I tackle this by means of large-scale radiation-magneto-hydrodynamics simulations which follow
+  the progression of star formation from large (cosmological Mpc, or galactic disk Kpc) scales down to those
+  of protostellar disks (tens of AU).</p>
+    
+    <p>Data wise, I'm keen to get my hands dirty.</p>
+
+<p>In my ample spare time, I enjoy cooking, rock climbing, jazz piano, volleyball, food infomercials, Skymall (RIP),
+    tennis, and writing brief autobiographical statements for use on my website.</p>
 </section>
