--- a/about.html
+++ b/about.html
@@ -13,12 +13,11 @@ title: "About"
     Richard Klein.</p>
 
  <p>Research wise, I'm interested in understanding how stars form across cosmic time - both at high redshifts and at the
-    present day. I tackle this by means of large-scale radiation-magneto-hydrodynamics simulations which follow
-  the progression of star formation from large (cosmological Mpc, or galactic disk Kpc) scales down to those
-  of protostellar disks (tens of AU).</p>
-    
-    <p>Data wise, I'm keen to get my hands dirty.</p>
+    present day. I tackle this by means of large-scale radiation-magneto-hydrodynamic simulations which follow
+  the progression of star formation from large (Mpc/Kpc) scales down to those
+  of protostellar disks (tens of AU).  </p>
 
-<p>In my ample spare time, I enjoy cooking, rock climbing, jazz piano, volleyball, food infomercials, Skymall (RIP),
-    tennis, and writing brief autobiographical statements for use on my website.</p>
+
+<p>When not looking at a computer screen, I enjoy cooking, rock climbing, jazz piano, volleyball, 
+  food infomercials, Skymall, tennis, and writing brief autobiographical statements for use on my website.</p>
 </section>
