--- a/posts.html
+++ b/posts.html
@@ -4,7 +4,7 @@ title: "Posts"
 ---
 
 <section class="content">
- <h1>Posts</h1>
+ <h1>Posts -- Coming Soon</h1>
   <ul class="listing">
     {% for post in site.posts %}
       {% unless post.draft %}
