Adding some papers.

--- a/papers.html
+++ b/papers.html
@@ -7,5 +7,14 @@ title: "About"
 <section class="content">
  <h1>Publications</h1>
 
+<p><a href="/web/20151020114257/http://adsabs.harvard.edu/abs/2012ApJ...761...56R" target="_blank"><i>Confined Population III Enrichment and the Prospects for Prompt Second-Generation
+ Star Formation</i></a><br>
+Ritter, J. S., <b>Safranek-Shrader, C.</b>, Gnat, O., Milosavljevic,
+ M., & Bromm, V. <br>2012, ApJ, 761, 56</p>
+<br>
+
+<p ><a href="/web/20151020114257/http://adsabs.harvard.edu/abs/2010ApJ...723.1568S" target="_blank"><i>Fragmentation in The First Galaxies</i></a><br>
+<b>Safranek-Shrader, C.</b>, Bromm, V., & Milosavljevic, M. <br> 2010, ApJ, 723, 1568</p>
+<br>
 
 </section>
