--- a/papers.html
+++ b/papers.html
@@ -33,7 +33,7 @@ title: "About"
 </i></a><br>
       Sluder, A., Ritter, J., <b>Safranek-Shrader, C.</b>, Milosavljevic, M.,
       Bromm, V.  <br>
-   2015, MNRAS, 456, 1410 </p>
+   2016, MNRAS, 456, 1410 </p>
 <br>
 
 
@@ -47,6 +47,13 @@ title: "About"
 <br>
 
 
+<p ><a href="http://adsabs.harvard.edu/abs/2016ASSL..423...65M"
+      target="_blank"><i>Star Formation for Predictive Primordial Galaxy Formation
+</i></a><br>
+      Milosavljevic, M. & <b>Safranek-Shrader, C.</b> <br>
+   2016, Astrophysics and Space Science Library, 423, 65 </p>
+<br>
+
 
 <p ><a href="http://adsabs.harvard.edu/abs/2015MNRAS.449.3057Z"
       target="_blank"><i>Primordial star clusters at extreme magnification
@@ -56,6 +63,15 @@ title: "About"
    2015, MNRAS, 449, 3057</p>
 <br>
 
+
+
+<p ><a href="http://adsabs.harvard.edu/abs/2015MNRAS.449.3057Z"
+      target="_blank"><i>Primordial star clusters at extreme magnification
+</i></a><br>
+   Zackrisson, E., Gonazlez, J., Eriksson, S., Asadi, S.,
+      <b>Safranek-Shrader, C.</b>, Trenti, M., & Inoue, A. <br>
+   2015, MNRAS, 449, 3057</p>
+<br>
 
 
 
