--- a/contact.html
+++ b/contact.html
@@ -12,16 +12,17 @@ title: "Contact"
         <tbody>
 	
           <tr>
-            <td><p>Email</p></td>
+            <td><p></p></td>
             <td><p>csafranek [at] gmail.com</p></td>
           </tr>
           <tr>
-            <td><p>Phone</p></td>
+            <td><p></p></td>
             <td><p>(310) 625-8599</p></td>
           </tr>
           <tr>
-            <td><p>Mail</p></td>
-            <td><p>UC Berkeley<br>Department of Astronomy
+            <td><p></p></td>
+            <td><p>University of California, Berkeley
+	      <br>Department of Astronomy
 	      <br>501 Campbell Hall # 3411<br> Berkeley, CA 94720
             USA</p>  </td>
           </tr>
