--- a/subreddit_fdg_100.html
+++ b/subreddit_fdg_100.html
@@ -31,7 +31,7 @@ div.tooltip {
 
 </style>
 <svg width="1260" height="800"></svg>
-<script src="http://d3js.org/d3.v4.min.js"></script>
+<script src="https://d3js.org/d3.v4.min.js"></script>
 
 <script>
 
