--- a/subreddit_fdg_2000.html
+++ b/subreddit_fdg_2000.html
@@ -31,7 +31,7 @@ div.tooltip {
 
 </style>
 <svg width="1200" height="1000"></svg>
-<script src="http://d3js.org/d3.v4.min.js"></script>
+<script src="https://d3js.org/d3.v4.min.js"></script>
 <script src="https://d3js.org/d3-scale-chromatic.v0.3.min.js"></script>
 
 <script>
