Adding link to demo.

--- a/index.html
+++ b/index.html
@@ -5,4 +5,5 @@ title: "Posts"
 
 <section class="content">
  <h1>Hey.</h1>
+ <a href="https://docs.google.com/presentation/d/1f9KhfNFsGuPaGOqbLqimtVRJNeqBeauZw812imzvejA/edit#slide=id.p">Value Vote Demo</a>
 </section>
