more blog updates.

--- a/txturnout.html
+++ b/txturnout.html
@@ -189,7 +189,7 @@ build a regression model, predicting the change in the voter turnout rate from t
 
 
 <p>
-From a business perspective, the most interesting metric is how much better, or worse, this model preforms opposed to preexisting model where voter turnout rates are assumed to be static --- we will express this in terms of the total vote error. Restricting ourself to the 2016 Texas State House and Senate primary races, the static model misclassified 1.97 million voters, while the model here reduced this misclassification by 290,000 people to 1.68 million voters. Given there were a total of 4.1 million votes in these elections, my model represents an improvement of roughly 7%.
+From Value Voting's business perspective, the most interesting metric is how much better, or worse, this model preforms compared with their preexisting model where voter turnout rates are assumed to be static --- we will express this in terms of the total vote error. Restricting ourself to the 2016 Texas State House and Senate primary races, the static model misclassified 1.97 million voters, while the model here reduced this misclassification by 290,000 people to 1.68 million voters. Given there were a total of 4.1 million votes in these elections, my model represents an improvement of roughly 7%.
 </p>
 
 
