--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@ title: "Posts"
 ---
 
 <section class="content">
- <h1>Hey.</h1>
- <a href="https://docs.google.com/presentation/d/1f9KhfNFsGuPaGOqbLqimtVRJNeqBeauZw812imzvejA/edit?usp=sharing">Value Vote Demo</a>
+<h1>Hey there.</h1>
+<br>
+ <a href="https://docs.google.com/presentation/d/1f9KhfNFsGuPaGOqbLqimtVRJNeqBeauZw812imzvejA/edit?usp=sharing">Value
+Voting Demo</a><br>
+ <a href="https://chalence.github.io/txturnout.html">Value
+Voting Blog</a>
+
 </section>
