--- a/about.html
+++ b/about.html
@@ -5,20 +5,29 @@ title: "About"
 
 <!-- You can edit this whole page, remove it, or use it as basis for any non-post pages you have. -->
 <section class="content">
- <h1>About</h1>
-
+ <h1>About Me</h1>
+<br>
   <p>Hello World. My name is Chalence Safranek-Shrader. I grew up in sunny Los Angeles, California, and
     received my B.S. in astrophysics from UCLA in 2007. In 2014 I was awarded my Ph.D from the University 
-    of Texas at Austin where I was jointly advised by Volker Bromm and Milos Milosavljevic. I am currently
-    a postdoctoral fellow at the University of California, Berkeley where I work with Christopher McKee and 
-    Richard Klein.</p>
+    of Texas at Austin where I was jointly advised by Volker Bromm and
+Milos Milosavljevic. I then spent some time as a postdoctoral fellow
+at the University of California, Santa Cruz, and UC Berkeley where I
+worked with Mark Krumholz, Christopher McKee, and 
+Richard Klein.</p>
 
- <p>Research wise, I'm interested in understanding how stars form across cosmic time - both at high redshifts and at the
-    present day. I tackle this by means of large-scale radiation-magneto-hydrodynamic simulations which follow
+<p>
+I am currently a fellow at Insight Data Science where I am pleased to be making the
+transition from academia to industry. I am keen to apply my data
+analysis, statistics, and machine learning background to tackle
+interesting, business-oriented challenges. 
+
+
+ <p>Research wise, I was primarily interested in understanding how stars form across cosmic time - both at high redshifts and at the
+    present day. I tackled this by means of large-scale radiation-magneto-hydrodynamic simulations which followed
   the progression of star formation from large (Mpc/Kpc) scales down to those
-  of protostellar disks (tens of AU).  </p>
+of protostellar disks (tens of AU).  </p>
 
 
-<p>When not looking at a computer screen, I enjoy cooking, rock climbing, jazz piano, volleyball, 
-  food infomercials, Skymall, tennis, and writing brief autobiographical statements for use on my website.</p>
+
+<p>When not looking at a computer screen, I enjoy cooking, rock climbing, jazz piano, volleyball, food infomercials, Skymall, and tennis.</p>
 </section>
